--- a/nginx/etc/conf.d/v2ray.conf
+++ b/nginx/etc/conf.d/v2ray.conf
@@ -11,8 +11,8 @@ server {
     ssl_session_cache shared:SSL:10m;
     ssl_session_timeout 10m;
     ssl_session_tickets off;
-    ssl_certificate xxxxx; # 改成你的证书地址
-    ssl_certificate_key xxxx; # 改成证书密钥文件地址
+    ssl_certificate ../ssl/1_rc.tuikexing.com_bundle.crt; # 改成你的证书地址
+    ssl_certificate_key ../ssl/2_rc.tuikexing.com.key; # 改成证书密钥文件地址
 
     access_log  /var/log/nginx/xxxx.access.log;
     error_log /var/log/nginx/xxx.error.log;
