--- a/nginx/docker-compose.yaml
+++ b/nginx/docker-compose.yaml
@@ -11,3 +11,4 @@ services:
     volumes:
 #      - ./etc/nginx.conf:/etc/nginx/nginx.conf:ro
       - ./etc/conf.d:/etc/nginx/conf.d:ro
+      - ./etc/ssl:/etc/nginx/_ssl:ro
