--- a/mysql57/docker-compose.yaml
+++ b/mysql57/docker-compose.yaml
@@ -2,14 +2,14 @@ version: '3.1'
 
 services:
   db:
-      # image: mysql:5.7
-    image: mysql:5.6
+    image: mysql:5.7
+    #    image: mysql:5.6
     command: --default-authentication-plugin=mysql_native_password
-    restart: always
+    restart: "no"
     ports:
       - "33060:3306"
     environment:
-        MYSQL_ROOT_PASSWORD: root
+      MYSQL_ROOT_PASSWORD: root
     volumes:
-        - /Users/yifei/mysql56/conf.d:/etc/mysql/conf.d
-        - /Users/yifei/mysql56/data:/var/lib/mysql
+      - ./conf.d:/etc/mysql/conf.d
+      - ./data:/var/lib/mysql
